# Socket

Socket1/: .byteOrder.c.swp  address.c  byteOrder.c  makefile
Socket2/: echocli  echocli.c  echosrv  echosrv.c  echosrv2  echosrv2.c  makefile
Socket3/: makefile  p2pcli  p2pcli.c  p2psrv  p2psrv.c
Socket4/: CMakeLists.txt  basicfun.c  basicfun.h  echocli.c  echosrv2.c  makefile
Socket5/: CMakeLists.txt  basicfun.c  echocli.c  echosrv2.c  getiplist.c  hostname.c  makefile
Socket6/: CMakeLists.txt  echocli.c  echocli2.c  echosrv2.c  makefile
Socket7/: CMakeLists.txt  basicfun.h  echocli.c  echosrv2.c  makefile
