cmake_minimum_required(VERSION 3.1)
project(Socket5)
set(CMAKE_C_STANDARD 11)
set(CMAKE_C_STANDARD_REQUIRED True)
#set(CMAKE_CC_FLAGES "-g -Wall")
add_compile_options(-g -Wall)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)

add_executable(echosrv2 echosrv2.c basicfun.c)
add_executable(echocli echocli.c basicfun.c)
add_executable(hostname hostname.c)
add_executable(getiplist getiplist.c)
target_include_directories(echosrv2 PUBLIC ${PROJECT_SOURCE_DIR})
target_include_directories(echocli PUBLIC ${PROJECT_SOURCE_DIR})
